# ai-studio-2

./: .gitignore  AGENTS.md  README.md
.agents/rules/: frontend-mirror-development.md
.agents/workflows/: git-commit-helper.md  lint-python.md
.claude/skills/git-commit-helper/: SKILL.md
.claude/skills/lint-python/: SKILL.md
.cursor/: mcp.json
backend/: .dockerignore  .gitignore  .python-version  Dockerfile  Dockerfile.dev  pyproject.toml  settings.yaml
backend/app/: config.py  main.py
backend/app/chat/: __init__.py  langgraph_agent.py  llm_client.py  plan_agent.py  routes.py  schemas.py  service.py  tools.py
backend/fastapi/: .gitignore  pyproject.toml  settings.sample.yaml  settings.yaml
backend/fastapi/app/: config.py
backend/fastapi/app/chat/: langgraph_agent.py  llm_client.py  memory_store.py  plan_agent.py  routes.py  schemas.py  service.py
backend/fastapi/app/configs/: __init__.py  providers.py
backend/fastapi/app/core/: __init__.py  middleware.py
backend/fastapi/tests/: conftest.py  test_chat_endpoints.py
docker/: docker-compose.dev.yaml  docker-compose.yaml
frontend/: .gitignore  Dockerfile.dev  package-lock.json  package.json
frontend/app/: config.ts  globals.css  layout.tsx  page.tsx
frontend/app/chat/: Chat.tsx
frontend/app/components/: ContextMenu.tsx  SettingsButton.tsx  SettingsModal.tsx
frontend/app/i18n/: config.ts
frontend/next/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/next/app/: config.ts  (+2 more)
frontend/vue/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
(+43 files in other folders)
