[project]
name = "ai-studio-2"
version = "0.1.0"
description = "FastAPI backend for AI Monorepo"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "dynaconf[yaml]>=3.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
]

[tool.setuptools]
packages = ["app"]
