[project]
name = "ai-studio-2"
version = "0.2.0"
description = "FastAPI backend for AI Monorepo"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "uvicorn>=0.41.0",
    "openai>=2.26.0",
    "dynaconf[yaml]>=3.2.12",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langchain-google-genai>=4.2.1",
    "langchain_nvidia_ai_endpoints>=1.1.0",
    "langgraph>=1.0.10",
    "deepagents>=0.4.7",
]

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ty>=0.0.21",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0",
    "asgi-lifespan>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
